--- a/clip2cct.plist
+++ b/clip2cct.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>https://github.com/tokasia/tokasia.github.io/releases/download/0.1/clip2cct.ipa</string>
+                                        <string>https://github.com/clipcardbeta/clipcardbeta.github.io/releases/download/1.0/clip2cct.ipa</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
